--- a/src/locales/commands/it.json
+++ b/src/locales/commands/it.json
@@ -5,8 +5,7 @@
     "errors.need_party_leader": "Devo essere il leader del partito per eseguire questo comando!",
     "errors.only_for_owners": "Questo comando è disponibile solo per i proprietari di bot.",
     "errors.only_for_admins": "Questo comando è disponibile solo per gli amministratori di bot.",
-    "errors.only_for_whitelist": "Questo comando è disponibile solo per gli utenti nella whitelist del bot.",
-    "test": "questa è una prova"
+    "errors.only_for_whitelist": "Questo comando è disponibile solo per gli utenti nella whitelist del bot."
   },
   "config.all_items": {
     "description": "Mostra gli ultimi cosmetici aggiunti al gioco, è possibile aggiungere un filtro opzionale e puoi fermarti con il comando \"stop\".",
